@@ -82,6 +82,7 @@ Bug fixes:
 - teleportAuto_equip should work for Teleport lv2 now too.
 - Give a more descriptive error when we are missing skill or item
   descriptions.
+- Don't check cards on pet eggs.
 
 New features:
 - Console::Unix interface no longer has "Press ENTER to continue"
